--- a/4_2_load_data.ipynb
+++ b/4_2_load_data.ipynb
@@ -18,12 +18,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div class=\"alert alert-warning\">\n",
+    "    We use elemental PyTorch to implement linear regression here. However, in most actual applications, abstractions such as <code>nn.Module</code> or <code>nn.Linear</code> are used.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Slicing 1D Array"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -255,33 +264,13 @@
        "array([ 2,  6, 10])"
       ]
      },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "b[:, 1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 9, 10, 11, 12])"
-      ]
-     },
      "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "b[-1]"
+    "b[:, 1]"
    ]
   },
   {
@@ -301,7 +290,7 @@
     }
    ],
    "source": [
-    "b[-1, :]"
+    "b[-1]"
    ]
   },
   {
@@ -321,7 +310,7 @@
     }
    ],
    "source": [
-    "b[-1, ...]"
+    "b[-1, :]"
    ]
   },
   {
@@ -332,11 +321,31 @@
     {
      "data": {
       "text/plain": [
+       "array([ 9, 10, 11, 12])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b[-1, ...]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
        "array([[1, 2, 3, 4],\n",
        "       [5, 6, 7, 8]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,25 +358,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Loading data from file"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-warning\">\n",
-    "    TF 예제가 numpy 를 썼는데, pandas 를 쓰는 건 어떨까?\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np"
+    "## Loading Data from `.csv` file"
    ]
   },
   {
@@ -376,12 +367,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xy = np.loadtxt('data-01-test-score.csv', delimiter=',', dtype=np.float32)"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xy = np.loadtxt('data-01-test-score.csv', delimiter=',', dtype=np.float32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -443,12 +443,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## PyTorch"
+    "## Imports"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,16 +460,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7fe5e410a550>"
+       "<torch._C.Generator at 0x7f528804e590>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,16 +483,86 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "다시 Linear regression model을 정의합니다."
+    "## Low-level Implementation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch    0/20 Cost: 26811.960938\n",
+      "Epoch    1/20 Cost: 9920.529297\n",
+      "Epoch    2/20 Cost: 3675.299072\n",
+      "Epoch    3/20 Cost: 1366.261108\n",
+      "Epoch    4/20 Cost: 512.542236\n",
+      "Epoch    5/20 Cost: 196.896484\n",
+      "Epoch    6/20 Cost: 80.190910\n",
+      "Epoch    7/20 Cost: 37.038647\n",
+      "Epoch    8/20 Cost: 21.081354\n",
+      "Epoch    9/20 Cost: 15.178741\n",
+      "Epoch   10/20 Cost: 12.993667\n",
+      "Epoch   11/20 Cost: 12.183028\n",
+      "Epoch   12/20 Cost: 11.880545\n",
+      "Epoch   13/20 Cost: 11.765955\n",
+      "Epoch   14/20 Cost: 11.720857\n",
+      "Epoch   15/20 Cost: 11.701424\n",
+      "Epoch   16/20 Cost: 11.691505\n",
+      "Epoch   17/20 Cost: 11.685121\n",
+      "Epoch   18/20 Cost: 11.680006\n",
+      "Epoch   19/20 Cost: 11.675381\n",
+      "Epoch   20/20 Cost: 11.670943\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 데이터\n",
+    "x_train = torch.FloatTensor(x_data)\n",
+    "y_train = torch.FloatTensor(y_data)\n",
+    "# 모델 초기화\n",
+    "W = torch.zeros((3, 1), requires_grad=True)\n",
+    "b = torch.zeros(1, requires_grad=True)\n",
+    "# optimizer 설정\n",
+    "optimizer = optim.SGD([W, b], lr=1e-5)\n",
+    "\n",
+    "nb_epochs = 20\n",
+    "for epoch in range(nb_epochs + 1):\n",
+    "    \n",
+    "    # H(x) 계산\n",
+    "    hypothesis = x_train.matmul(W) + b # or .mm or @\n",
+    "\n",
+    "    # cost 계산\n",
+    "    cost = torch.mean((hypothesis - y_train) ** 2)\n",
+    "\n",
+    "    # cost로 H(x) 개선\n",
+    "    optimizer.zero_grad()\n",
+    "    cost.backward()\n",
+    "    optimizer.step()\n",
+    "\n",
+    "    # 100번마다 로그 출력\n",
+    "    print('Epoch {:4d}/{} Cost: {:.6f}'.format(\n",
+    "        epoch, nb_epochs, cost.item()\n",
+    "    ))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## High-level Implementation with `nn.Module`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class LinearRegressionModel(nn.Module):\n",
+    "class MultivariateLinearRegressionModel(nn.Module):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
     "        self.linear = nn.Linear(3, 1)\n",
@@ -502,31 +572,35 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "이제 새로운 데이터로 코드를 돌려 피팅시켜보겠습니다."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch  100/1000 Cost: 14.251838\n",
-      "Epoch  200/1000 Cost: 12.934040\n",
-      "Epoch  300/1000 Cost: 11.844110\n",
-      "Epoch  400/1000 Cost: 10.939923\n",
-      "Epoch  500/1000 Cost: 10.187639\n",
-      "Epoch  600/1000 Cost: 9.560027\n",
-      "Epoch  700/1000 Cost: 9.035046\n",
-      "Epoch  800/1000 Cost: 8.594834\n",
-      "Epoch  900/1000 Cost: 8.224863\n",
-      "Epoch 1000/1000 Cost: 7.913259\n"
+      "Epoch    0/20 Cost: 28388.000000\n",
+      "Epoch    1/20 Cost: 10504.286133\n",
+      "Epoch    2/20 Cost: 3892.179688\n",
+      "Epoch    3/20 Cost: 1447.497314\n",
+      "Epoch    4/20 Cost: 543.628357\n",
+      "Epoch    5/20 Cost: 209.440048\n",
+      "Epoch    6/20 Cost: 85.878799\n",
+      "Epoch    7/20 Cost: 40.191814\n",
+      "Epoch    8/20 Cost: 23.297268\n",
+      "Epoch    9/20 Cost: 17.048059\n",
+      "Epoch   10/20 Cost: 14.734761\n",
+      "Epoch   11/20 Cost: 13.876624\n",
+      "Epoch   12/20 Cost: 13.556563\n",
+      "Epoch   13/20 Cost: 13.435411\n",
+      "Epoch   14/20 Cost: 13.387821\n",
+      "Epoch   15/20 Cost: 13.367404\n",
+      "Epoch   16/20 Cost: 13.357059\n",
+      "Epoch   17/20 Cost: 13.350419\n",
+      "Epoch   18/20 Cost: 13.345175\n",
+      "Epoch   19/20 Cost: 13.340427\n",
+      "Epoch   20/20 Cost: 13.335882\n"
      ]
     }
    ],
@@ -535,12 +609,12 @@
     "x_train = torch.FloatTensor(x_data)\n",
     "y_train = torch.FloatTensor(y_data)\n",
     "# 모델 초기화\n",
-    "model = LinearRegressionModel()\n",
+    "model = MultivariateLinearRegressionModel()\n",
     "# optimizer 설정\n",
-    "optimizer = optim.SGD(model.parameters(), lr=3e-5)\n",
+    "optimizer = optim.SGD(model.parameters(), lr=1e-5)\n",
     "\n",
-    "nb_epochs = 1000\n",
-    "for epoch in range(nb_epochs):\n",
+    "nb_epochs = 20\n",
+    "for epoch in range(nb_epochs+1):\n",
     "    \n",
     "    # H(x) 계산\n",
     "    prediction = model(x_train)\n",
@@ -554,26 +628,9 @@
     "    optimizer.step()\n",
     "    \n",
     "    # 20번마다 로그 출력\n",
-    "    if epoch % 100 == 99:\n",
-    "        print('Epoch {:4d}/{} Cost: {:.6f}'.format(\n",
-    "            epoch+1, nb_epochs, cost.item()\n",
-    "        ))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "점점 $H(x)$ 의 $W$ 와 $b$ 를 조정해서 cost가 줄어드는 것을 볼 수 있습니다."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-warning\">\n",
-    "    W 와 b 값을 출력해볼까?\n",
-    "</div>"
+    "    print('Epoch {:4d}/{} Cost: {:.6f}'.format(\n",
+    "        epoch, nb_epochs, cost.item()\n",
+    "    ))"
    ]
   },
   {
