--- a/6_1_softmax_classification.ipynb
+++ b/6_1_softmax_classification.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lab 6-1: Softmax Classifier"
+    "# Lab 6-1: Softmax Classification"
    ]
   },
   {
@@ -18,21 +18,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "여러개 중 하나를 예측할 때 유용하다"
+    "<div class=\"alert alert-warning\">\n",
+    "    We use elemental PyTorch to implement linear regression here. However, in most actual applications, abstractions such as <code>nn.Module</code> or <code>nn.Linear</code> are used.\n",
+    "</div>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$ S(y_i) = \\frac{e^{y_i}}{\\sum_j e^{y_j}} $$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Softmax"
+    "## Imports"
    ]
   },
   {
@@ -55,7 +50,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7fd0f8541f90>"
+       "<torch._C.Generator at 0x7f8740076fb0>"
       ]
      },
      "execution_count": 2,
@@ -69,8 +64,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Softmax"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Convert numbers to probabilities with softmax."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ P(class=i) = \\frac{e^i}{\\sum e^i} $$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z = torch.FloatTensor([1, 2, 3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "PyTorch has a `softmax` function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -82,14 +114,20 @@
     }
    ],
    "source": [
-    "z = torch.FloatTensor([1, 2, 3])\n",
-    "out = F.softmax(z, dim=0)\n",
-    "print(out)"
+    "hypothesis = F.softmax(z, dim=0)\n",
+    "print(hypothesis)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since they are probabilities, they should add up to 1. Let's do a sanity check."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -98,63 +136,64 @@
        "tensor(1.)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "out.sum()"
+    "hypothesis.sum()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cross Entropy Loss"
+    "## Cross Entropy Loss (Low-level)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Softmax에 걸맞는 loss function"
+    "For multi-class classification, we use the cross entropy loss."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$ L = \\frac{1}{N} \\sum y \\log(\\hat{y}) $$"
+    "$$ L = \\frac{1}{N} \\sum - y \\log(\\hat{y}) $$"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "pred = torch.randn(3, 5, requires_grad=True)\n",
-    "target = torch.randint(5, (3,), dtype=torch.int64)"
+    "where $\\hat{y}$ is the predicted probability and $y$ is the correct probability (0 or 1)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 0.6614,  0.2669,  0.0617,  0.6213, -0.4519],\n",
-      "        [-0.1661, -1.5228,  0.3817, -1.0276, -0.5631],\n",
-      "        [-0.8923, -0.0583, -0.1955, -0.9656,  0.4224]], requires_grad=True)\n"
+      "tensor([[0.2645, 0.1639, 0.1855, 0.2585, 0.1277],\n",
+      "        [0.2430, 0.1624, 0.2322, 0.1930, 0.1694],\n",
+      "        [0.2226, 0.1986, 0.2326, 0.1594, 0.1868]], grad_fn=<SoftmaxBackward>)\n"
      ]
     }
    ],
    "source": [
-    "print(pred)"
+    "z = torch.rand(3, 5, requires_grad=True)\n",
+    "hypothesis = F.softmax(z, dim=1)\n",
+    "print(hypothesis)"
    ]
   },
   {
@@ -166,12 +205,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([2, 3, 2])\n"
+      "tensor([0, 2, 1])\n"
      ]
     }
    ],
    "source": [
-    "print(target)"
+    "y = torch.randint(5, (3,))\n",
+    "print(y)"
    ]
   },
   {
@@ -182,7 +222,9 @@
     {
      "data": {
       "text/plain": [
-       "tensor(1.9087, grad_fn=<NllLossBackward>)"
+       "tensor([[1., 0., 0., 0., 0.],\n",
+       "        [0., 0., 1., 0., 0.],\n",
+       "        [0., 1., 0., 0., 0.]])"
       ]
      },
      "execution_count": 8,
@@ -191,57 +233,94 @@
     }
    ],
    "source": [
-    "F.cross_entropy(pred, target)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-warning\">\n",
-    "    PyTorch에서 cross_entropy 는 softmax를 포함한다.\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Model"
+    "y_one_hot = torch.zeros_like(hypothesis)\n",
+    "y_one_hot.scatter_(1, y.unsqueeze(1), 1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(1.4689, grad_fn=<MeanBackward1>)\n"
+     ]
+    }
+   ],
    "source": [
-    "class SoftmaxClassifierModel(nn.Module):\n",
-    "    def __init__(self):\n",
-    "        super().__init__()\n",
-    "        self.linear = nn.Linear(4, 3) # Output이 3!\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        return self.linear(x)"
+    "cost = (y_one_hot * -torch.log(hypothesis)).sum(dim=1).mean()\n",
+    "print(cost)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cross-entropy Loss with `torch.nn.functional`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "PyTorch has `F.log_softmax()` function."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-1.3301, -1.8084, -1.6846, -1.3530, -2.0584],\n",
+       "        [-1.4147, -1.8174, -1.4602, -1.6450, -1.7758],\n",
+       "        [-1.5025, -1.6165, -1.4586, -1.8360, -1.6776]], grad_fn=<LogBackward>)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "x_train = [[1, 2, 1, 1]]\n",
-    "x_train = torch.FloatTensor(x_train)"
+    "# Low level\n",
+    "torch.log(F.softmax(z, dim=1))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-1.3301, -1.8084, -1.6846, -1.3530, -2.0584],\n",
+       "        [-1.4147, -1.8174, -1.4602, -1.6450, -1.7758],\n",
+       "        [-1.5025, -1.6165, -1.4586, -1.8360, -1.6776]],\n",
+       "       grad_fn=<LogSoftmaxBackward>)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "model = SoftmaxClassifierModel()"
+    "# High level\n",
+    "F.log_softmax(z, dim=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "PyTorch also has `F.nll_loss()` function that computes the negative loss likelihood."
    ]
   },
   {
@@ -250,16 +329,19 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[ 0.9147,  0.7679, -0.5841]], grad_fn=<ThAddmmBackward>)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "tensor(1.4689, grad_fn=<MeanBackward1>)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "prediction = model(x_train)\n",
-    "print(prediction)"
+    "# Low level\n",
+    "(y_one_hot * -torch.log(F.softmax(z, dim=1))).sum(dim=1).mean()"
    ]
   },
   {
@@ -270,7 +352,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[0.4792, 0.4138, 0.1070]], grad_fn=<SoftmaxBackward>)"
+       "tensor(1.4689, grad_fn=<NllLossBackward>)"
       ]
      },
      "execution_count": 13,
@@ -279,19 +361,47 @@
     }
    ],
    "source": [
-    "F.softmax(prediction, dim=1)"
+    "# High level\n",
+    "F.nll_loss(F.log_softmax(z, dim=1), y)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Training"
+    "PyTorch also has `F.cross_entropy` that combines `F.log_softmax()` and `F.nll_loss()`."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(1.4689, grad_fn=<NllLossBackward>)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "F.cross_entropy(z, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training with Low-level Cross Entropy Loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,6 +419,144 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch    0/1000 Cost: 1.098612\n",
+      "Epoch  100/1000 Cost: 0.901535\n",
+      "Epoch  200/1000 Cost: 0.839114\n",
+      "Epoch  300/1000 Cost: 0.807826\n",
+      "Epoch  400/1000 Cost: 0.788472\n",
+      "Epoch  500/1000 Cost: 0.774822\n",
+      "Epoch  600/1000 Cost: 0.764449\n",
+      "Epoch  700/1000 Cost: 0.756191\n",
+      "Epoch  800/1000 Cost: 0.749398\n",
+      "Epoch  900/1000 Cost: 0.743671\n",
+      "Epoch 1000/1000 Cost: 0.738749\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 모델 초기화\n",
+    "W = torch.zeros((4, 3), requires_grad=True)\n",
+    "b = torch.zeros(1, requires_grad=True)\n",
+    "# optimizer 설정\n",
+    "optimizer = optim.SGD([W, b], lr=0.1)\n",
+    "\n",
+    "nb_epochs = 1000\n",
+    "for epoch in range(nb_epochs + 1):\n",
+    "\n",
+    "    # Cost 계산 (1)\n",
+    "    hypothesis = F.softmax(x_train.matmul(W) + b, dim=1) # or .mm or @\n",
+    "    y_one_hot = torch.zeros_like(hypothesis)\n",
+    "    y_one_hot.scatter_(1, y_train.unsqueeze(1), 1)\n",
+    "    cost = (y_one_hot * -torch.log(F.softmax(hypothesis, dim=1))).sum(dim=1).mean()\n",
+    "\n",
+    "    # cost로 H(x) 개선\n",
+    "    optimizer.zero_grad()\n",
+    "    cost.backward()\n",
+    "    optimizer.step()\n",
+    "\n",
+    "    # 100번마다 로그 출력\n",
+    "    if epoch % 100 == 0:\n",
+    "        print('Epoch {:4d}/{} Cost: {:.6f}'.format(\n",
+    "            epoch, nb_epochs, cost.item()\n",
+    "        ))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training with `F.cross_entropy`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch    0/1000 Cost: 1.098612\n",
+      "Epoch  100/1000 Cost: 0.761050\n",
+      "Epoch  200/1000 Cost: 0.689991\n",
+      "Epoch  300/1000 Cost: 0.643229\n",
+      "Epoch  400/1000 Cost: 0.604117\n",
+      "Epoch  500/1000 Cost: 0.568255\n",
+      "Epoch  600/1000 Cost: 0.533922\n",
+      "Epoch  700/1000 Cost: 0.500291\n",
+      "Epoch  800/1000 Cost: 0.466908\n",
+      "Epoch  900/1000 Cost: 0.433507\n",
+      "Epoch 1000/1000 Cost: 0.399962\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 모델 초기화\n",
+    "W = torch.zeros((4, 3), requires_grad=True)\n",
+    "b = torch.zeros(1, requires_grad=True)\n",
+    "# optimizer 설정\n",
+    "optimizer = optim.SGD([W, b], lr=0.1)\n",
+    "\n",
+    "nb_epochs = 1000\n",
+    "for epoch in range(nb_epochs + 1):\n",
+    "\n",
+    "    # Cost 계산 (2)\n",
+    "    z = x_train.matmul(W) + b # or .mm or @\n",
+    "    cost = F.cross_entropy(z, y_train)\n",
+    "\n",
+    "    # cost로 H(x) 개선\n",
+    "    optimizer.zero_grad()\n",
+    "    cost.backward()\n",
+    "    optimizer.step()\n",
+    "\n",
+    "    # 100번마다 로그 출력\n",
+    "    if epoch % 100 == 0:\n",
+    "        print('Epoch {:4d}/{} Cost: {:.6f}'.format(\n",
+    "            epoch, nb_epochs, cost.item()\n",
+    "        ))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## High-level Implementation with `nn.Module`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SoftmaxClassifierModel(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.linear = nn.Linear(4, 3) # Output이 3!\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return self.linear(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = SoftmaxClassifierModel()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -317,67 +565,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch  100/1000 Cost: 0.697610\n",
-      "Epoch  200/1000 Cost: 0.609269\n",
-      "Epoch  300/1000 Cost: 0.550272\n",
-      "Epoch  400/1000 Cost: 0.498888\n",
-      "Epoch  500/1000 Cost: 0.450523\n",
-      "Epoch  600/1000 Cost: 0.403491\n",
-      "Epoch  700/1000 Cost: 0.357054\n",
-      "Epoch  800/1000 Cost: 0.311161\n",
-      "Epoch  900/1000 Cost: 0.267986\n",
-      "Epoch 1000/1000 Cost: 0.241539\n"
+      "Epoch    0/1000 Cost: 1.849513\n",
+      "Epoch  100/1000 Cost: 0.689895\n",
+      "Epoch  200/1000 Cost: 0.609259\n",
+      "Epoch  300/1000 Cost: 0.551218\n",
+      "Epoch  400/1000 Cost: 0.500141\n",
+      "Epoch  500/1000 Cost: 0.451947\n",
+      "Epoch  600/1000 Cost: 0.405051\n",
+      "Epoch  700/1000 Cost: 0.358733\n",
+      "Epoch  800/1000 Cost: 0.312912\n",
+      "Epoch  900/1000 Cost: 0.269522\n",
+      "Epoch 1000/1000 Cost: 0.241921\n"
      ]
     }
    ],
    "source": [
-    "# 모델 초기화\n",
-    "model = SoftmaxClassifierModel()\n",
     "# optimizer 설정\n",
     "optimizer = optim.SGD(model.parameters(), lr=0.1)\n",
     "\n",
     "nb_epochs = 1000\n",
-    "for epoch in range(nb_epochs):\n",
-    "    \n",
+    "for epoch in range(nb_epochs + 1):\n",
+    "\n",
     "    # H(x) 계산\n",
     "    prediction = model(x_train)\n",
     "\n",
     "    # cost 계산\n",
     "    cost = F.cross_entropy(prediction, y_train)\n",
-    "    \n",
+    "\n",
     "    # cost로 H(x) 개선\n",
     "    optimizer.zero_grad()\n",
     "    cost.backward()\n",
     "    optimizer.step()\n",
     "    \n",
     "    # 20번마다 로그 출력\n",
-    "    if epoch % 100 == 99:\n",
+    "    if epoch % 100 == 0:\n",
     "        print('Epoch {:4d}/{} Cost: {:.6f}'.format(\n",
-    "            epoch+1, nb_epochs, cost.item()\n",
+    "            epoch, nb_epochs, cost.item()\n",
     "        ))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "점점 $H(x)$ 의 $W$ 와 $b$ 를 조정해서 cost가 줄어드는 것을 볼 수 있습니다."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-warning\">\n",
-    "    W 와 b 값을 출력해볼까?\n",
-    "</div>"
    ]
   }
  ],
